# ccutils

./: .gitignore  CMakeLists.txt  README.md  ccutils_parser.py
examples/cpu/: CMakeLists.txt  Makefile  cpu_timers.cpp
examples/cuda/: CMakeLists.txt  Makefile  cuda_example.cu
examples/mpi/: CMakeLists.txt  Makefile  mpi_example.cpp
include/ccutils/: colors.h  formats.h  macros.h  timers.h
include/ccutils/cuda/: cuda_macros.h  cuda_timers.h  cuda_utils.hpp
include/ccutils/mpi/: mpi_macros.h  mpi_timers.h
